Fix navbar dropdowns - Dropdown buttons are not links, a without href isn't tabble - Add aria-haspopup to indicate dropdown - #projects doesn't exist, aria-labelledby has no effect - Icon isn't useful for sr's so should be hidden
* Would've added aria-expanded as well, but doesn't look like
it's quite as easy to add a script to toogle the attribute

--- a/app/styles/hack.styl
+++ b/app/styles/hack.styl
@@ -27,7 +27,17 @@ body
 .navbar-inverse .nav > li > a
   color #ccc!important
   text-shadow 0 0 1px rgba(255,255,255,0.3)
-.navbar-inverse .nav > li > a:hover
+.navbar-inverse .nav > li > .btn-link
+  color #ccc!important
+  font-size 16px
+  padding 8px 5px
+.navbar-inverse .icon-caret-down
+  margin-left 5px
+  vertical-align baseline
+.navbar-inverse .nav > li > a:hover,
+.navbar-inverse .nav > li > .btn-link:hover,
+.navbar-inverse .nav > li > .btn-link:focus
+  text-decoration none
   color #fff!important
   text-shadow 0 0px 16px rgba(128,128,128,1)
   background-color rgba(255,255,255,0.1)
@@ -36,7 +46,7 @@ body
   color hsl(0, 0%, 75%)
 .navbar-fixed-top .container
   width 945px
-  
+
 /* hide nav labels when window.width < 1200px */
 @media (max-width: 1200px)
   .navbar ul.nav span.label
